--- a/README
+++ b/README
@@ -6,5 +6,8 @@ Project Salient features:
 Project uses the twitter API and Twitter4J Library.
 
 * Save (Persist) Favorite Tweets of the User
+* Show all the Tweets marked Favorite by a User
+  * Filter By User
+  * Filter By Time (Chronological)
 * Resolve and fetch the HTML / Pages embedded in tweets via bit.ly, t.co etc.
 * Share the saved tweets via HTML EMail
